initial my old resume web1

--- a/web/food.html
+++ b/web/food.html
@@ -15,6 +15,7 @@ body,td,th {
 </head>
 
 <body>
+	<h3><a href="https://ayano2003.github.io/lwhweb/">返回个人主页</a></h3>
 <h1><center>澳門土生葡菜</center></h1>
 <h3>澳門土生葡菜的歷史—起源</h3>
 <p>葡萄牙把其殖民地和航海時途經的地區的飲食文化融合
