--- a/web/history.html
+++ b/web/history.html
@@ -32,8 +32,11 @@ a:active {
 <title>中葡文化歷史</title>
 </head>
 
-<body>
+<body><h3><a href="https://ayano2003.github.io/lwhweb/">返回个人主页</a></h3>
+	<br>
+
 	<center>
+		
 	  <h1>中葡文化歷史</h1></center>
 <table width="1347" border="0" cellpadding="40">
   <tbody>
