--- a/web/humanistic.html
+++ b/web/humanistic.html
@@ -17,6 +17,7 @@ body {
 </head>
 
 <body>
+	<h3><a href="https://ayano2003.github.io/lwhweb/">返回个人主页</a></h3>
 	<center><h1>中葡人文</h1></center>
 	<h2>宗教</h2>
 <p>澳葡政府曾以天主教為官方宗教
