--- a/web/history.html
+++ b/web/history.html
@@ -33,9 +33,7 @@ a:active {
 </head>
 
 <body>
-	<h3><a href="https://ayano2003.github.io/lwhweb/">返回个人主页</a></h3>
-	<center>
-	  <h1>中葡文化歷史</h1></center>
+<center><h1>中葡文化歷史</h1></center>
 <table width="1347" border="0" cellpadding="40">
   <tbody>
     <tr>
